# Angewandte-Programmierung

./: .gitignore  README.md  api_tests.py  main-test-fabi.py  main.py  main_old.py  pyproject.toml  work-log.md
VS_Studio_Data/: pyproject.toml
data/: notes.json
