[project]
name = "angewandte-programmierung"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "requests>=2.33.1",
    "sqlmodel>=0.0.38",
    "streamlit>=1.57.0",
]
